--- a/decuongmonhoc/index.html
+++ b/decuongmonhoc/index.html
@@ -81,7 +81,7 @@
 					</div>
 				</div>
 				<div class="row">
-					<table id="myTable" class="table cell-border hover" style="width:100%" >
+					<table id="myTable" class="table table-striped table-hover table-bordered table-responsive" style="width:100%" >
 						<thead>
 							<tr class="table-primary">
 								<th align="center">STT</th>
@@ -175,8 +175,8 @@
 							{ "data": "Số TC" },
 							// { "data": "DKTQ" },
 							{ "data": "Mã môn học" },
-							{ "data": "Tóm tắt" },
-							{ "data": "Xem chi tiết" }]
+							{ "data": "TomTat" },
+							{ "data": "ChiTiet" }]
 					}
 				);
 
