--- a/index.html
+++ b/index.html
@@ -1,5 +1,174 @@
-﻿<html>
-	<body>
-		Hello, I am Nguyen Si Thieu. This is my website.
-	</body>
-</html>
+
+
+<div style="text-align:center; margin-bottom:20px;">
+  <h2 style="color: #FF7043;">Tìm kiếm hồ sơ lý lịch khoa học</h2>
+  <p>Nhập từ khóa để tìm kiếm (có thể nhập nhiều từ, ngăn cách bằng dấu +)</p>
+  <input id="searchInput" type="text" placeholder="Nhập từ khóa"
+         style="width: 300px; padding: 8px; border: 1px solid #FF7043;">
+  <button onclick="searchScientists()"
+          style="padding: 8px 15px; background: #1976D2; color: white; border: none;">
+    🔍 Tìm kiếm
+  </button>
+</div>
+
+<div id="resultsContainer"></div>
+
+<style>
+.modal-overlay {
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: rgba(0,0,0,0.5);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.modal-box {
+  background: white;
+  padding: 20px;
+  width: 90%;
+  max-width: 800px;
+  border-radius: 8px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.3);
+  display: flex;
+  gap: 20px;
+  position: relative;
+}
+
+.modal-box img {
+  width: 160px;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 4px;
+}
+
+.modal-close {
+  position: absolute;
+  top: 10px; right: 15px;
+  font-size: 24px;
+  cursor: pointer;
+  color: #888;
+}
+</style>
+
+<div id="modal" class="modal-overlay" onclick="closeModal(event)">
+  <div class="modal-box" id="modalContent" onclick="event.stopPropagation()">
+    <span class="modal-close" onclick="closeModal(event)">×</span>
+    <!-- Nội dung sẽ được JS chèn vào -->
+  </div>
+</div>
+
+
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
+
+<script>
+
+const firebaseConfig = {
+  apiKey: "AIzaSyC9s7QpCbtQMP7V4qo3dmYw5Ta5v1VpKus",
+  authDomain: "tra-cuu-llkh-apd.firebaseapp.com",
+  databaseURL: "https://tra-cuu-llkh-apd-default-rtdb.asia-southeast1.firebasedatabase.app/",
+  projectId: "tra-cuu-llkh-apd",
+  storageBucket: "tra-cuu-llkh-apd.firebasestorage.app",
+  messagingSenderId: "22412932837",
+  appId: "1:22412932837:web:06d13ed631754943f2860c"
+};
+
+firebase.initializeApp(firebaseConfig);
+const db = firebase.database();
+
+let scientists = [];
+
+// Lấy dữ liệu từ Firebase
+db.ref("nhakhoahoc").once("value").then(snapshot => {
+  const data = snapshot.val();
+  scientists = Object.values(data);
+  console.log("Dữ liệu Firebase:", scientists);
+});
+
+function removeDiacritics(str) {
+      return str.normalize("NFD").replace(/[̀-ͯ]/g, "").replace(/đ/g, "d").replace(/Đ/g, "D");
+    }
+	
+function searchScientists() {
+  const input = document.getElementById("searchInput").value.toLowerCase();
+      const query = removeDiacritics(input).split('+').map(q => q.trim());
+
+      const results = scientists.filter(sci => {
+        const text = removeDiacritics(
+          (sci.hoten + " " + (sci.hocham || '') + " " + (sci.hocvi || '') + " " + (sci.chucvu || '') + " " +
+           (sci.donvi || '')).toLowerCase()
+        );
+        return query.some(q => text.includes(q));
+      });
+
+  const container = document.getElementById("resultsContainer");
+  if (results.length === 0) {
+    container.innerHTML = "<p>Không tìm thấy kết quả phù hợp.</p>";
+    return;
+  }
+
+  let html = `<p><strong>Kết quả tìm kiếm:</strong> Có ${results.length} nhà khoa học được tìm thấy!</p>`;
+  html += results.map((sci, index) => {
+	const imgSrc = sci.anhthe ? sci.anhthe : "https://upload.wikimedia.org/wikipedia/commons/thumb/8/89/Portrait_Placeholder.png/120px-Portrait_Placeholder.png";
+	return `
+    <div style="display:flex; align-items:center; border-bottom:1px solid #ccc; padding:10px 0;">
+      <img src="${imgSrc}" alt="ảnh" style="width:60px; height:75px; object-fit:cover; border-radius:4px; margin-right:15px;">
+      <div>
+      <p style="margin:0;">
+		<a href="javascript:void(0)" onclick='showModal(${JSON.stringify(sci)})'>
+
+          <strong>${(sci.hocham || '') + ' ' + (sci.hocvi || '') + ' ' + (sci.hoten || '')}</strong>
+        </a>
+	</p>
+	<p>
+      ${sci.chucvu ? `${sci.chucvu}` : ''} - 
+              ${sci.donvi ? `<em>${sci.donvi}</em>` : ''}
+			  </p>
+    </div></div>
+  `; }).join("");
+
+  container.innerHTML = html;
+}
+
+function showModal(sci) {
+  const imgSrc = sci.anhthe ? sci.anhthe : "https://upload.wikimedia.org/wikipedia/commons/thumb/8/89/Portrait_Placeholder.png/120px-Portrait_Placeholder.png";
+  const modal = document.getElementById("modal");
+  const content = document.getElementById("modalContent");
+
+  content.innerHTML = `
+    <span class="modal-close" onclick="closeModal(event)">×</span>
+    <img src="${imgSrc}" alt="${sci.hoten}">
+    <div>
+      <h3>${(sci.hocham || '') + ' ' + (sci.hocvi || '') + ' ' + sci.hoten}</h3>
+      <p>${sci.chucvu ? `<strong>${sci.chucvu}</strong>` : ''} - ${sci.donvi ? `<em>${sci.donvi}</em>` : ''}
+	  </p>
+	  ${sci.namsinh ? `<p>🎂 Năm sinh: ${sci.namsinh}</p>` : ''}
+      ${sci.dienthoai ? `<p>📞 Số điện thoại: ${sci.dienthoai}</p>` : ''}
+      ${sci.email ? `<p>📧 Email: ${sci.email}</p>` : ''}
+          ${sci.diachi ? `<p>📍 Địa chỉ: ${sci.diachi}</p>` : ''}
+      
+       ${sci.lvnc ? `<p>🔬 Lĩnh vực nghiên cứu: ${sci.lvnc}</p>` : ''}
+          ${sci.llkh ? `<p><a href="${sci.llkh}" target="_blank">🔗 Xem chi tiết LLKH</a></p>` : ''}
+    </div>
+  `;
+
+  modal.style.display = "flex";
+}
+
+function closeModal(event) {
+  event.stopPropagation();
+  const modal = document.getElementById("modal");
+  modal.style.display = "none";
+}
+
+// Gọi tìm kiếm khi nhấn Enter trong ô input
+document.getElementById("searchInput").addEventListener("keydown", function(event) {
+  if (event.key === "Enter") {
+	event.preventDefault();
+	searchScientists();
+  }
+});
+</script>
