--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 
 <div style="text-align:center; margin-bottom:20px;">
-  <h2 style="color: #FF7043;">Tìm kiếm hồ sơ lý lịch khoa học</h2>
+  <h2 style="color: #0574B5;">Tìm kiếm hồ sơ lý lịch khoa học</h2>
   <p>Nhập từ khóa để tìm kiếm (có thể nhập nhiều từ, ngăn cách bằng dấu +)</p>
   <input id="searchInput" type="text" placeholder="Nhập từ khóa"
          style="width: 300px; padding: 8px; border: 1px solid #FF7043;">
